# huggingface-finetuning-lab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  setup.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
configs/: lora_text_classification.yaml  text_classification.yaml
data/raw/: support_tickets.csv
docs/: architecture.md  data_model.md  deployment.md  methodology.md  quickstart_5min.md  release_process.md  responsible_use.md
examples/: run_sample.py
notebooks/: 01_hf_text_classification_workflow.ipynb  02_experiment_management.ipynb  03_robust_evaluation.ipynb  04_hub_datasets.ipynb  05_token_classification.ipynb  06_semantic_search.ipynb  07_governance_template.ipynb  08_serving_hardening.ipynb  09_v1_capstone.ipynb  10_promotion_gate.ipynb
prompts/: next_agent_prompts.md
reports/sample_run/: README.md
scripts/: setup_branch_protection.ps1
src/hf_finetuning_lab/: __init__.py  artifacts.py  cli.py  config.py  pipeline.py  sample_data.py
src/hf_finetuning_lab/data/: hub.py  io.py  splits.py
src/hf_finetuning_lab/evaluation/: evaluator.py  metrics.py  robust.py
src/hf_finetuning_lab/experiments/: __init__.py  runs.py
src/hf_finetuning_lab/governance/: __init__.py  dataset_card.py  promotion.py  reproducibility.py  templates.py
src/hf_finetuning_lab/inference/: predictor.py
src/hf_finetuning_lab/model_cards/: model_card.py
src/hf_finetuning_lab/retrieval/: __init__.py  index.py  metrics.py
src/hf_finetuning_lab/serving/: api.py  bootstrap.py  logging.py  metrics.py
src/hf_finetuning_lab/token_classification/: __init__.py  alignment.py  metrics.py  schema.py
src/hf_finetuning_lab/tokenization/: tokenizer.py
src/hf_finetuning_lab/training/: trainer.py
tests/: test_artifacts_and_cli.py  test_config.py  test_data_io.py  test_evaluator.py  test_experiments.py  test_governance.py  test_hub.py  test_metrics.py  test_model_card.py  test_promotion.py  test_retrieval.py  test_robust.py  test_sample_data.py  test_serving.py  test_splits.py  test_token_classification.py  test_training_trainer.py
