[tool.poetry]
name = "huggingface-finetuning-lab"
version = "1.0.0"
description = "Production-focused Hugging Face NLP fine-tuning lab with reproducible training, evaluation, PEFT/LoRA, serving, and model cards"
keywords = [
  "hugging-face",
  "transformers",
  "nlp",
  "text-classification",
  "fine-tuning",
  "peft",
  "lora",
  "fastapi",
  "pytorch",
]
authors = ["Diogo Ribeiro <diogo_dj@hotmail.com>"]
readme = "README.md"
packages = [{ include = "hf_finetuning_lab", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"
typer = { version = "^0.12.0", extras = ["all"] }
pyyaml = "^6.0.1"
matplotlib = "^3.8.0"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.7.0"
transformers = "^4.46.0"
datasets = "^2.21.0"
evaluate = "^0.4.2"
accelerate = "^0.33.0"
torch = "^2.3.0"
safetensors = "^0.4.3"
huggingface-hub = "^0.24.0"
peft = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.5.0"
mypy = "^1.10.0"
httpx = "^0.27.0"
pre-commit = "^4.2.0"
nbqa = "^1.9.1"
jupyter = "^1.1.1"
types-PyYAML = "^6.0.12"

[tool.poetry.scripts]
hf-lab = "hf_finetuning_lab.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"
exclude = [
  ".git",
  ".pytest_cache",
  ".mypy_cache",
  ".ruff_cache",
  "__pycache__",
  "artifacts",
  "notebooks",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
pretty = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
